# StephenSmithwick.github.io

./: .gitignore  .vale.ini  Brewfile  Gemfile  README.md  StephenSmithwickResume.md  StephenSmithwickResume_Bluestaq.md  UsingllamaToRefinePosts.sh  _config.yml  about.md  allow-unsigned.sh  build-comments.sh  cv.html  cv.md  days_until_date.py  favicon.piko  golink.html  google-sheet-access.html  index.html  justfile  post.header.template.md  post.template.md  rc.bash  resume.html  resume.md  resume_ai.md  resume_azure.md  weekly-plan.tex
_cv/: 04_experience.md  05_snowflake.md  06_amazon.md  10_education.md  11_key_skills.md  12_tools.md  14_other.md
_includes/: comments.html  embed.html  feedback.html  footer.html  github-icon.html  head.html  header.html  leetcode.preload.js.html  leetcode_instructions.md  planner-icon.html  plugins.html  printable.html
_layouts/: cv.html  default.html  page.html  post.html  resume.html  resume_bluestaq.html
_posts/: -llm-kiss-principle.md  2015-12-07-welcome-to-jekyll.markdown  2022-12-14-name-of-post.md  2022-12-19-adhoc-log-summaries.md  2022-12-21-my-Brewfile.md  2023-01-27-jq.md  2023-03-03-leetcode-algorithms copy.md  2023-03-03-leetcode-algorithms.md  2023-03-05-ways-of-working.md  2023-03-24-alpaca-llama-cpp.md  2023-03-30-monads.md  2023-04-06-monads-2.md  2023-04-10-generative-ml.md  2023-04-11-getting-started-with-rust.md  2023-04-11-rust.md  2023-06-08-multiple-git-accounts.md  2023-06-17-tls-certificates.md  2023-11-17-terraform.md  2024-01-25-local-ocr.md  (+43 more)
rust/reagent/: Cargo.toml
rust/reagent/src/: main.rs
(+323 files in other folders)
