[package]
name = "reagent"
version = "0.1.0"
edition = "2024"

[dependencies]
actson = { version = "2.1.0", features = ["tokio"] }
anyhow = "1.0.100"
futures = "0.3.31"
futures-util = "0.3.31"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = "1.0.226"
serde_json = "1.0.145"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.16"
